--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Jessie Muir / Personal website"
 title_separator          : "-"
 name                     : &name "Jessie Muir"
 description              : &description "personal description"
-# url                      : https://jessmuir.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-url                      : https://jessiemuir.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://jessmuir.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+# url                      : https://jessiemuir.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jessmuir/jessmuir.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
