--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   location         : "KIPAC @ Stanford"
   employer         :
   googlescholar    : 
-  email            : "jlmuir [at] stanford [dot] edu
+  email            : "jlmuir [at] stanford [dot] edu"
   uri              :
   bitbucket        : "jessmuir"
   codepen          :
@@ -98,7 +98,7 @@ author:
   orcid            : "https://orcid.org/0000-0002-7579-770X
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : 
   steam            :
   tumblr           :
   twitter          : "jlynnmuir"
