--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,19 @@
 # main links links
 main:
   - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
+    url: /publications/  
 
   - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+    url: /teaching/
+
   - title: "CV"
     url: /cv/
+        
+  - title: "Cartoons"
+    url: /cartoons/
     
-  - title: "Guide"
-    url: /markdown/
+  - title: "Travel"
+    url: /travel/  
+    
+#  - title: "Guide"
+#    url: /markdown/
