--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ author:
   instagram        :
   lastfm           :
   linkedin         :
-  orcid            : "https://orcid.org/0000-0002-7579-770X
+  orcid            : "https://orcid.org/0000-0002-7579-770X"
   pinterest        :
   soundcloud       :
   stackoverflow    : 
