--- a/_config.yml
+++ b/_config.yml
@@ -78,8 +78,8 @@ author:
   name             : "Jessie Muir"
   avatar           : "jessie-headshot-15-websize.jpg"
   bio              : "Porat Fellow, cosmologist"
-  location         : "KIPAC @ Stanford"
-  employer         :
+  location         : "Palo Alto, CA"
+  employer         : "KIPAC @ Stanford"
   googlescholar    : 
   email            : "jlmuir [at] stanford [dot] edu"
   uri              :
