--- a/_config.yml
+++ b/_config.yml
@@ -55,9 +55,9 @@ alexa_site_verification  :
 yandex_site_verification :
 
 # Social Sharing
-twitter:
-  username               : &twitter
-og_image                 :  # Open Graph/Twitter default site image
+# twitter:
+#   username               : &twitter
+# og_image                 :  # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 # social:
@@ -94,7 +94,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
+  linkedin         : "jlynnmuir"
   orcid            : "https://orcid.org/0000-0002-7579-770X"
   pinterest        :
   soundcloud       :
@@ -107,7 +107,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-  inspire	   : "https://inspirehep.net/author/profile/Jessica.Muir.1"
+  # inspire	   : "https://inspirehep.net/author/profile/Jessica.Muir.1"
 
 
 # Reading Files
