--- a/_config.yml
+++ b/_config.yml
@@ -55,9 +55,9 @@ alexa_site_verification  :
 yandex_site_verification :
 
 # Social Sharing
-# twitter:
-#   username               : &twitter
-# og_image                 :  # Open Graph/Twitter default site image
+twitter:
+   username               : &twitter
+ og_image                 :  # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 # social:
