--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ author:
   name             : "Jessie Muir"
   avatar           : "jessie-headshot-15-websize.jpg"
   bio              : "Porat Fellow, cosmologist"
-  location         : 
+#  location         : 
   employer         :"KIPAC @ Stanford"
   googlescholar    : 
   email            : "jlmuir [at] stanford [dot] edu"
