--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ social-network-links:
   email: "jlmuir@stanford.edu"
   github: jessmuir
   twitter: jlynnmuir
-  inpire: Jessica.Muir.1
+  inspire: Jessica.Muir.1
   orchid: 0000-0002-7579-770X
 #  reddit: yourname
 #  linkedin: daattali
