--- a/_config.yml
+++ b/_config.yml
@@ -173,8 +173,8 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      comments: true  # add comments to all blog posts
-      social-share: true # add social media sharing buttons to all blog posts
+      comments: false  # add comments to all blog posts
+      social-share: false  # add social media sharing buttons to all blog posts
   -
     scope:
       path: "" # all files
