changed index header

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Jessie Muir
 
 # Short description of your site
-description: Theory and data analysis to test the standard cosmological model. Porat Fellow at KIPAC, Stanford. 
+description: Personal site. 
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
