--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ navbar-links:
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
+navbar-text-col: "#FFFFFF"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
@@ -50,8 +50,8 @@ footer-link-col: "#404040"
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
 
-# navbar-img: "/img/bgimage.png"
-# footer-img: "/img/bgimage.png"
+navbar-img: "/img/hubble-deep-field-wallpaper.jpg"
+footer-img: "/img/hubble-deep-field-wallpaper.jpg"
 # page-img: "/img/bgimage.png"
 
 # --- Footer options --- #
