--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,8 @@ page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+footer-text-col: "#FFFFFF" #  "#777777"
+footer-link-col: "#b8b6b6" # "#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
