trying to fix cartoons

--- a/_config.yml
+++ b/_config.yml
@@ -161,6 +161,7 @@ markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
+paginate_path: "/cartoons/page:num/"
 
 kramdown:
   input: GFM
