added navbar image

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ footer-link-col: "#b8b6b6" # "#404040"
 
 navbar-img: "/img/hubble-deep-field-wallpaper.jpg"
 footer-img: "/img/hubble-deep-field-wallpaper.jpg"
-# page-img: "/img/bgimage.png"
+page-img: "/cartoons/images/Cosmology_Tube6.all.jpg"
 
 # --- Footer options --- #
 
