trying to remove backgorund image

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/cartoons/images/Cosmology_Tube6.all.jpg"
+# avatar: "/cartoons/images/Cosmology_Tube6.all.jpg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -52,7 +52,7 @@ footer-link-col: "#b8b6b6" # "#404040"
 
 navbar-img: "/img/hubble-deep-field-wallpaper.jpg"
 footer-img: "/img/hubble-deep-field-wallpaper.jpg"
-# page-img: "/cartoons/images/Cosmology_Tube6.all.jpg"
+# page-img: 
 
 # --- Footer options --- #
 
