--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: Personal site.
 navbar-links:
   Research: "research"
   # Publications: "pubs"
-  Travel: "travel"
+  #Travel: "travel"
   Cartoons: "cartoons"	
 
 # Image to show in the navigation bar - image must be a square (width = height)
@@ -73,7 +73,7 @@ social-network-links:
   inspire: Jessica.Muir.1
   orchid: 0000-0002-7579-770X
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: jlynnmuir
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
