fixed orcid spelling

--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ social-network-links:
   github: jessmuir
   twitter: jlynnmuir
   inspire: Jessica.Muir.1
-  orchid: 0000-0002-7579-770X
+  orcid: 0000-0002-7579-770X
 #  reddit: yourname
   linkedin: jlynnmuir
 #  xing: yourname
