--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
 #  rss: true
-  email: "jlmuir@stanford.edu"
+  email: "jmuir@perimeterinstitute.ca"
   github: jessmuir
   twitter: jlynnmuir
   inspire: Jessica.Muir.1
